<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/navigationItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/search_border"
    android:padding="8dp">

    <RelativeLayout
        android:id="@+id/common"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:adjustViewBounds="true"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@+id/image"
            android:layout_toRightOf="@+id/image"
            android:gravity="center_vertical"
            android:text="@string/app_name"
            android:textColor="#000000"
            android:textSize="18sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/common"
        android:layout_marginTop="5dp"
        android:text="05 Dec 2013"
        android:textColor="#000000"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/date"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:scrollHorizontally="true"
        android:text="@string/rate_dialog_message"
        android:textColor="#000000"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/msg"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <RatingBar
            android:id="@+id/ratingbar"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:isIndicator="true"
            android:numStars="5"
            android:rating="4.5"
            android:theme="@style/RatingBar" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/msg_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/btn1"
                android:layout_toStartOf="@+id/btn1"
                android:text="@string/content1"
                android:textColor="#000000"
                android:textSize="14sp" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn1"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_margin="8dp"
                android:background="@color/red"
                android:drawableLeft="@android:drawable/sym_action_email"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/title_nav_email"
                android:textColor="#FFFFFF"
                android:textSize="12sp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/msg_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:scrollHorizontally="true"
            android:text="@string/content2"
            android:textColor="#000000"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn0"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/green"
                android:drawableLeft="@drawable/ic_whatsapp"
                android:gravity="center"
                android:lines="2"
                android:padding="5dp"
                android:text="@string/whatsapp"
                android:textColor="#FFFFFF"
                android:textSize="12sp" />


            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn2"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/bg_screen1"
                android:drawableLeft="@drawable/ic_share"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/fab_share"
                android:textColor="#FFFFFF"
                android:textSize="12sp" />
        </LinearLayout>


    </LinearLayout>
</RelativeLayout>