<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="RtlHardcoded">

        <TextView
            android:id="@+id/lable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/bmi_calculator"
            android:textColor="@color/color1"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_below="@+id/lable"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:text="@string/units"
            android:textColor="@color/color1"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/lable"
            android:layout_marginRight="10dp"
            android:background="@drawable/edittext_bg"
            android:clickable="true"
            android:padding="5dp" />

        <LinearLayout
            android:id="@+id/weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinner1"
            android:layout_margin="10dp">


            <EditText
                android:id="@+id/weightNum"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/edittext_bg"
                android:hint="@string/weightR"
                android:inputType="number|numberDecimal"
                android:paddingLeft="10dp"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/weight"
            android:layout_margin="10dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/heightNum1"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/edittext_bg"
                    android:hint="@string/heightR"
                    android:inputType="number|numberDecimal"
                    android:paddingLeft="10dp"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/heightNum2"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext_bg"
                    android:inputType="number|numberDecimal"
                    android:paddingLeft="10dp"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>


        <RelativeLayout
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/calcBMI"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:text="@string/bmi_string"
                android:textColor="#9AABB4"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/resultLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/textView5"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:text=""
                android:textColor="@color/color1"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/resultLabel"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:text="@string/the_prime_bmi_body_mass_index"
                android:textColor="#9AABB4"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/resultLabel1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/textView6"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text=""
                android:textColor="@color/color1"
                android:textSize="30sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/resultLabel2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/resultLabel1"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text=""
                android:textColor="@color/color1"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_below="@+id/resultLabel2"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/color1" />
        </RelativeLayout>


        <ImageView
            android:id="@+id/chart"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@+id/result"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@null"
            android:scaleType="centerInside"
            android:src="@drawable/bmi_chart"
            android:visibility="gone" />


        <Button
            android:id="@+id/calcBMI"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/height"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:padding="10dp"
            android:text="@string/countButtonR"
            android:textColor="@color/cardview_light_background"
            android:textSize="15sp" />
    </RelativeLayout>
</ScrollView>